--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
         "@openzeppelin/contracts": "5.0.1",
         "hardhat": "^2.19.5",
         "prettier-plugin-solidity": "^1.3.1"
+    },
+    "dependencies": {
+        "@openzeppelin/merkle-tree": "^1.0.6"
     }
 }
