--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "prettier-plugin-solidity": "^1.3.1"
     },
     "dependencies": {
-        "@openzeppelin/merkle-tree": "^1.0.6"
+        "@openzeppelin/merkle-tree": "^1.0.6",
+        "hardhat-gas-reporter": "^1.0.10"
     }
 }
