--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "week7-8/lib/openzeppelin-contracts"]
 	path = week7-8/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "sandbox/lib/forge-std"]
+	path = sandbox/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
