--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "sandbox/lib/forge-std"]
 	path = sandbox/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "ethernaut/lib/forge-std"]
+	path = ethernaut/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
